Cambios en filtros en CXC y CXP

--- a/ADMFacturar/Views/CXP/Abono.cshtml
+++ b/ADMFacturar/Views/CXP/Abono.cshtml
@@ -3,6 +3,7 @@
 
 @{
     var abonos = ViewData["Abonos"] as List<AbonoCXP>;
+    var documento = ViewData["Documento"] as string;
 }
 
 <!DOCTYPE html>
