--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -64,7 +64,7 @@
                     {
                         foreach (var abono in abonos)
                         {
-                            <tr class="border-b border-gray-200 hover:bg-gray-100">
+                            <tr class="even:bg-gray-700 hover:bg-gray-600">
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => abono.Numero_Abono)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => abono.FK_Documento_CC)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.Raw(abono.Fecha_Abono.ToString("dd/MM/yyyy"))</td>
