--- a/ADMFacturar/Views/Facturas/AgregarNC.cshtml
+++ b/ADMFacturar/Views/Facturas/AgregarNC.cshtml
@@ -86,8 +86,8 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="4" class="text-right py-2 px-4">Total</td>
-                            <td class="py-2 px-4" id="total">0</td>
+                            <td colspan="4" class="text-right py-2 px-4" style="display: none;">Total</td>
+                            <td class="py-2 px-4" id="total" style="display: none;">0</td>
                         </tr>
                     </tfoot>
                 </table>
