--- a/ADMFacturar/Views/CXP/Abono.cshtml
+++ b/ADMFacturar/Views/CXP/Abono.cshtml
@@ -2,8 +2,7 @@
 @model AbonoCXP
 
 @{
-    var abonos = ViewData["Abonos"] as List<AbonoCXP>;
-    var documento = ViewData["Documento"] as string;
+    var cxp = ViewData["CXP"] as CXP;
 }
 
 <!DOCTYPE html>
@@ -36,14 +35,14 @@
             <div>
                 <label for="FK_Documento" class="block text-sm font-medium text-gray-300">Documento</label>
                 <div class="mt-2">
-                    <input asp-for="FK_Documento" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                    <input asp-for="FK_Documento" type="text" value="@cxp.PK_Documento" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" readonly/>
                 </div>
             </div>
 
             <div>
                 <label for="Fecha_Abono" class="block text-sm font-medium text-gray-300">Fecha de Abono</label>
                 <div class="mt-2">
-                    <input asp-for="Fecha_Abono" type="date" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                    <input asp-for="Fecha_Abono" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
                 </div>
             </div>
 
@@ -74,7 +73,7 @@
             <div style="display: none;">
                 <label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
                 <div class="mt-2">
-                    <input asp-for="FK_Proveedor" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" readonly>
+                    <input asp-for="FK_Proveedor" value="@cxp.FK_Proveedor" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" readonly>
                 </div>
             </div>
 
@@ -82,7 +81,7 @@
         <div class="mt-6 flex justify-end gap-x-4">
             <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
             <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-            <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+            <button type="submit" id="btnCrear" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
             <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
         </div>
     </form>
@@ -90,67 +89,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
-        document.getElementById('btnGuardar').addEventListener('click', function (event) {
-            event.preventDefault(); // Detener el envío normal del formulario
-
-            // Validar campos requeridos
-            var fk_Documento = document.querySelector('[name="FK_Documento"]').value;
-            var fk_Proveedor = document.querySelector('[name="FK_Proveedor"]').value;
-            var montoAbonado = document.querySelector('[name="Monto_Abonado"]').value;
-            var tipoDocumento = document.querySelector('[name="Tipo_Documento"]').value;
-            var banco = document.querySelector('[name="Banco"]').value;
-            var fechaAbono = document.querySelector('[name="Fecha_Abono"]').value;
-
-            if (!fk_Documento || !fk_Proveedor || !montoAbonado || !tipoDocumento || !banco || !fechaAbono) {
-                // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'Por favor complete todos los campos requeridos.',
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: 'OK'
-                });
-            } else {
-                // Crear objeto FormData con los datos del formulario
-                var formData = new FormData(document.getElementById('formcreate'));
-
-                // Enviar los datos al controlador utilizando fetch
-                fetch('/CXP/CrearAbono', {
-                    method: 'POST',
-                    body: formData
-                })
-                    .then(response => {
-                        if (response.ok) {
-                            // Mostrar mensaje de éxito con SweetAlert2
-                            Swal.fire({
-                                icon: 'success',
-                                title: 'Guardado Correctamente',
-                                showConfirmButton: true,
-                                confirmButtonColor: '#3085d6',
-                                confirmButtonText: 'OK'
-                            }).then((result) => {
-                                // Redirigir a la página de índice de proveedores después de guardar
-                                window.location.href = '/CXP/Index';
-                            });
-                        } else {
-                            // Si la respuesta no es exitosa, mostrar mensaje de error
-                            throw new Error('Error al guardar los datos');
-                        }
-                    })
-                    .catch(error => {
-                        // Mostrar mensaje de error con SweetAlert2 si hay un error en la solicitud
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: error.message,
-                            confirmButtonColor: '#3085d6',
-                            cancelButtonColor: '#d33',
-                            confirmButtonText: 'OK'
-                        });
-                    });
-            }
-        });
+        
     </script>
 </body>
 </html>
