--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -17,6 +17,10 @@
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
+    <a href="/CXC/Index" class="text-white hover:text-gray-300">
+        <i class="fas fa-arrow-left fa-lg"></i> <!-- Ícono de flecha -->
+    </a>
+   
     <form>
         <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-white">Detalle del Documento</h2>
@@ -64,7 +68,7 @@
                     {
                         foreach (var abono in abonos)
                         {
-                            <tr class="border-b border-gray-200 hover:bg-gray-100">
+                            <tr class="even:bg-gray-700 hover:bg-gray-600">
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => abono.Numero_Abono)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => abono.FK_Documento_CC)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.Raw(abono.Fecha_Abono.ToString("dd/MM/yyyy"))</td>
